# ASnap

./: .gitignore  AI截图助手.spec  AI截图助手_新版.spec  LICENSE  README.md
.github/workflows/: windows-ci.yml  windows-release.yml
ai_screenshot/: __init__.py  main.py  provider_presets.py  providers.py  screen_service.py  ui_chat.py
docs/: README.md
docs/archive/: README.md
docs/archive/plans/: 2026-04-16-asnap-hdr-windowstate-branding.md  2026-04-18-application-controller-request-flow-split.md  2026-04-18-asnap-cleanup-phase1.md  2026-04-18-settingsdialog-split-phase2.md  2026-04-20-windows-native-capture-backend.md
docs/archive/specs/: 2026-04-14-ai-screenshot-design.md  2026-04-15-ai-screenshot-cpp-qt-design.md  2026-04-15-ai-screenshot-rewrite-design.md  2026-04-18-application-controller-request-flow-split-design.md  2026-04-18-floating-chat-panel-helper-split-design.md  2026-04-20-pixpin-style-capture-architecture-refactor-design.md  2026-04-20-windows-native-capture-backend-design.md
docs/plans/: 2026-04-18-asnap-readme-installer-plan.md  2026-04-18-floating-chat-panel-helper-split.md  2026-04-18-settingsdialog-split-phase1.md  2026-04-20-pixpin-style-capture-architecture-refactor.md
docs/specs/: 2026-04-18-asnap-readme-installer-design.md
docs/superpowers/plans/: 2026-04-14-ai-screenshot-modernization.md  2026-04-15-ai-screenshot-cpp-qt-v1.md  2026-04-24-text-query-shortcut.md
docs/superpowers/specs/: 2026-04-24-text-query-shortcut-design.md
legacy/python-prototype/: README.md  screenshot_ai.py
legacy/python-prototype/ai_screenshot/: app.py  config.py  hotkeys.py  placement.py  session.py  ui_capture.py
legacy/python-prototype/pyinstaller/: AI截图助手_V3.spec  AI截图助手_V4.spec
legacy/python-prototype/tests/: test_hotkeys.py  test_provider_errors.py  test_provider_presets.py  test_providers.py
native/: CMakeLists.txt  README.md
native/resources/: asnap.rc  branding.qrc
native/src/: main.cpp
native/src/ai/: ai_client.cpp  ai_client.h  network_transport.h  provider_factory.cpp  provider_factory.h  provider_interface.h  provider_test_runner.cpp  provider_test_runner.h  qt_network_transport.cpp  qt_network_transport.h  request_spec.h  sample_image_factory.cpp  sample_image_factory.h
native/src/app/: app_busy_state.h  application_controller.cpp  application_controller.h  conversation_request_controller.cpp  conversation_request_controller.h  request_guard.h
native/src/capture/: capture_mode.h  capture_overlay.cpp  capture_overlay.h  capture_selection.h  desktop_capture_service.cpp  desktop_capture_service.h  desktop_snapshot.h  screen_capture_backend.h
native/src/chat/: chat_message.h  chat_session.cpp  chat_session.h
native/src/config/: app_config.h  config_store.cpp  config_store.h  provider_preset.h  provider_profile.h  provider_protocol.h
native/src/platform/windows/: dpi_awareness.cpp  dpi_awareness.h  global_hotkey_host.cpp  global_hotkey_host.h  hotkey_chord.cpp  hotkey_chord.h  native_screen_capture.cpp  native_screen_capture.h  selected_text_query.cpp  selected_text_query.h  startup_registry.cpp  startup_registry.h  windows_graphics_capture_backend.cpp  windows_graphics_capture_backend.h
native/src/ui/: icon_factory.cpp  icon_factory.h  panel_placement.cpp  panel_placement.h
native/src/ui/chat/: chat_markdown_renderer.cpp  chat_markdown_renderer.h  code_syntax_highlighter.cpp  code_syntax_highlighter.h  floating_chat_panel.cpp  floating_chat_panel.h  floating_chat_panel_helpers.cpp  floating_chat_panel_helpers.h
native/src/ui/settings/: settingsdialog.cpp  settingsdialog.h  settingsdialog_appearance_helpers.cpp  settingsdialog_appearance_helpers.h  settingsdialog_appearance_section.cpp  settingsdialog_appearance_section.h
native/tests/: CMakeLists.txt  test_ai_layer.cpp  test_application_controller.cpp  test_capture_flow.cpp  test_config_and_session.cpp  test_network_transport.cpp  test_request_guard.cpp  test_ui_widgets.cpp
packaging/windows/: asnap.iss
scripts/: package-windows.ps1
tests/: test_candidate_hierarchy.py  test_capture_overlay.py  test_config.py  test_placement.py  test_session.py  test_window_candidates.py
